--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     ]
   },
   "devDependencies": {
-    "@types/blueimp-load-image": "^5.14.4"
+    "@types/blueimp-load-image": "^5.14.4",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-react": "^7.30.1"
   }
 }
