chore(eslint): 🔧 add `eslint-plugin-tailwindcss` & related ESLint config
VS CODE EXTENSION:
'Tailwind CSS IntelliSense"
https://marketplace.visualstudio.com/items?itemName=bradlc.vscode-tailwindcss

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "eslint:recommended",
     "plugin:react/all",
     "plugin:@typescript-eslint/recommended",
+    "plugin:tailwindcss/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
@@ -17,7 +18,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
+  "plugins": ["react", "@typescript-eslint", "tailwindcss"],
   "rules": {
     "newline-after-var": ["error", "always"],
     "newline-before-return": "error",
