--- a/package.json
+++ b/package.json
@@ -61,5 +61,13 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8"
-  }
+  },
+  "presets": [
+    [
+      "react-app",
+      {
+        "absoluteRuntime": false
+      }
+    ]
+  ]
 }
